// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogomarkSpinner renders a white spinner 1`] = `
@keyframes animation-0 {
  0%, 6% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  0%, 71% {
    -webkit-clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
  }

  96%, 100% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  height: 100px;
  width: 100px;
}

.emotion-1 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  margin: auto;
  width: 76.65%;
  will-change: clip-path;
}

.emotion-2 {
  -webkit-animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-3 {
  -webkit-clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
  will-change: stroke-dashoffset;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <svg
          class="emotion-4"
          version="1.1"
          viewBox="0 0 2640 3444"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Loading
          </title>
          <path
            class="emotion-5"
            d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
            fill="none"
            stroke="#ffffff"
            stroke-linejoin="round"
            stroke-width="300"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`LogomarkSpinner renders with a custom size 1`] = `
@keyframes animation-0 {
  0%, 6% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  0%, 71% {
    -webkit-clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
  }

  96%, 100% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  height: 200px;
  width: 200px;
}

.emotion-1 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  margin: auto;
  width: 76.65%;
  will-change: clip-path;
}

.emotion-2 {
  -webkit-animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-3 {
  -webkit-clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
  will-change: stroke-dashoffset;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <svg
          class="emotion-4"
          version="1.1"
          viewBox="0 0 2640 3444"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Loading
          </title>
          <path
            class="emotion-5"
            d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
            fill="none"
            stroke="#05192d"
            stroke-linejoin="round"
            stroke-width="300"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`LogomarkSpinner renders with default props 1`] = `
@keyframes animation-0 {
  0%, 6% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  0%, 71% {
    -webkit-clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -44%);
  }

  96%, 100% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  height: 100px;
  width: 100px;
}

.emotion-1 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  margin: auto;
  width: 76.65%;
  will-change: clip-path;
}

.emotion-2 {
  -webkit-animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-3 {
  -webkit-clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
  will-change: stroke-dashoffset;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <svg
          class="emotion-4"
          version="1.1"
          viewBox="0 0 2640 3444"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Loading
          </title>
          <path
            class="emotion-5"
            d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
            fill="none"
            stroke="#05192d"
            stroke-linejoin="round"
            stroke-width="300"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
